--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "publisher": "498",
+  "publisher": "ab-498",
   "name": "httpformat",
   "displayName": "HTTP Format - Formatter for plaintext .txt .http files With Standard REST Requests",
   "description": "Format your REST HTTP Client files with a single command. A very fast JSON and HTTP Format Prettier.",
-  "version": "1.0.38",
+  "version": "1.0.39",
   "icon": "imgs/icon.png",
   "repository": {
     "type": "git",
