--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "httpformat",
   "displayName": "HTTP Format - Formatter for plaintext .txt .http files With Standard REST Requests",
   "description": "Format your REST HTTP Client files with a single command. A very fast JSON and HTTP Format Prettier.",
-  "version": "1.0.43",
+  "version": "1.0.45",
   "icon": "imgs/icon.png",
   "repository": {
     "type": "git",
@@ -78,7 +78,11 @@
     "vscode:prepublish": "npm run esbuild-base",
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:unit": "mocha test/**/*.test.js",
+    "test:watch": "mocha test/**/*.test.js --watch",
+    "test:coverage": "nyc mocha test/**/*.test.js",
+    "test:only": "mocha test/**/*.test.js"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -87,6 +91,8 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.13.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
